// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
  id={null}
  rows={null}
>
  <input
    className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
    disabled={false}
    id="default"
    max={20}
    min={1}
    onChange={[Function]}
    step={1}
    type="range"
    value={8}
  />
</section>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <div
      title="Standard"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </div>
    <div
      title="Error"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 ggFdCU"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </div>
    <div
      title="Disabled"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
          disabled={true}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
      </section>
    </div>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <div
      title="Standard"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={10}
        />
      </section>
    </div>
    <div
      title="With Label"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq Slider__SliderLabel-sc-1hp9era-1 bMyAub"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          1
        </label>
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={1}
        />
        <div
          className="Bar__BarLayout-icfo76-2 ebMgLW"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              1
            </label>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              20
            </label>
          </div>
        </div>
      </section>
    </div>
    <div
      title="With Range"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kGwkvn"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 fuwuEK"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={15}
        />
        <div
          className="Bar__BarLayout-icfo76-2 ebMgLW"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              1
            </label>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              20
            </label>
          </div>
        </div>
      </section>
    </div>
  </section>
</form>
`;
